# rorschach-collector

./: .gitignore  Dockerfile  poetry.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
rorschach-collector/components/watchman/: __init__.py  nite_howl.py
rorschach_collector/: __init__.py  __main__.py
rorschach_collector/components/watchman/: __init__.py  insomnia.py  nite_howl.py  watch.py
